@@ -1,0 +1,4 @@
+include ../../config.make
+
+all:
+	MCS /t:library Library.cs
